--- a/Models/SpeechLM/ST2S/2025.02.11_Vevo.md
+++ b/Models/SpeechLM/ST2S/2025.02.11_Vevo.md
@@ -71,6 +71,27 @@ Audio samples are available at [this https URL](https://versavoice.github.io/).
 
 <table><tr><td width="50%">
 
+The imitation of voice has long been an important issue in the field of speech generation. This includes the imitation of speaker identity~\cite{parallel-vc-survey-2017,vc-survey-taslp}, the imitation of speaking style such as accent~\cite{accent-conversion-2009,l2arctic} or emotion~\cite{esd}, and a broader concept of voice cloning such as in zero-shot text-to-speech (TTS) task~\cite{tts-book-tanxu}.
+These techniques have a wide range of applications, including spoken language learning~\cite{accent-conversion-2009,l2arctic,parallel-ac-zhaoguanlong21}, voice anonymization~\cite{vc-as-anonymization}, voice assistants~\cite{seedtts,fireredtts}, and video dubbing~\cite{seedtts,maskgct,fireredtts}.
+
+To achieve targeted and controllable imitation over various speech attributes, many studies focuses on factorizing speech into multiple sub-spaces~\cite{speechsplit,speech-resynthesis-interspeech21,megatts,ns3}. In this work, we follow this idea and decompose speech into three key attributes: linguistic content (\textit{what to speak}), style (\textit{how to speak}), and timbre (\textit{who speaks}). Based on this, we define three zero-shot speech generation tasks (Table~\ref{tab:task}): (1) \textbf{Timbre Imitation}: Given a speech as source, imitate only the timbre of the reference speech while preserving the linguistic content and speaking style. It can be adopted in voice conversion that only spectral aspects of speech are converted~\cite{parallel-vc-survey-2017}. (2) \textbf{Style Imitation}: Given a speech as source, imitate only the speaking style of the reference speech while preserving the content and the timbre. It can be adopted in accent conversion~\cite{accent-conversion-2009} and emotion conversion~\cite{esd}. (3) \textbf{Voice Imitation}: Given either a speech (i.e., \textit{conversion task}) or text (i.e., \textit{synthesis task}) as source, imitate both the timbre and style of the reference speech while preserving the content. It can be adopted in voice conversion that both spectral and prosodic aspects of speech are converted~\cite{parallel-vc-survey-2017,vc-survey-taslp} and zero-shot TTS~\cite{tts-book-tanxu}.
+
+To address these imitation tasks, existing work has explored approaches including learning the conversion between parallel corpus~\cite{parallel-vc-2015,parallel-ec-2016,parallel-ac-zhaoguanlong21,voiceshop,convertandspeak}, disentangled representation learning~\cite{autovc,speechsplit,HuBERT,basetts,ns3,cosyvoice}, and large-scale in-context learning~\cite{tortoise-tts,valle,voicebox,uniaudio,seedtts}. However, these approaches still suffer from the following limitations.
+Firstly, for the style imitation, existing methods rely heavily on supervision with annotated data, which is hard to collect and scale up. This reliance includes the use of parallel corpus~\cite{parallel-ac-zhaoguanlong21,voiceshop,convertandspeak}, style labels (such as categories of accent~\cite{asr-ac,voiceshop,convertandspeak} or emotion~\cite{emovox,pavits}), and textual transcriptions~\cite{asr-ac,chenxi-tts-ac,emovox,pavits}. Moreover, achieving \textit{zero-shot} style imitation—where a system can imitate an accent, emotion, or other speaking styles from just a few seconds of speech—remains a significant challenge.
+Secondly, the decoupling of timbre and style in existing methods is still insufficient, making it challenging to control them independently, unless mitigated by some timbre (or style) perturbations or additional fine-tuning stages ~\cite{seedtts,maskgct,u-style}.
+
+Motivated by the above, this paper proposes Vevo, a \underline{ve}rsatile zero-shot \underline{vo}ice imitation framework with controllable timbre and style (Figure~\ref{fig:Vevo-pipeline}). It can serve as a unified framework for a wide range of zero-shot speech generation tasks. Vevo consists of two core stages: (1) \textbf{Content-Style Modeling} (\textit{Content to Content-Style}): Given a speech prompt as style reference, we generate \textit{content-style} tokens from the input \textit{content} tokens (or the input text). We employ the decoder-only autoregressive transformer~\cite{transformer,llama}, leveraging its powerful capability of continued generation to model style. (2) \textbf{Acoustic Modeling} (\textit{Content-Style to Acoustic}): Given a speech prompt as timbre reference, we generate acoustic representations (such as Mel spectrograms) from the input of \textit{content-style} tokens. We use a flow-matching transformer~\cite{flow-matching,dit}, which has been verified to excel in in-context learning and reconstructing high-quality audio~\cite{voicebox,audiobox,cosyvoice,fireredtts}, to achieve timbre-controllable generation.
+
+To obtain the \textit{content} and \textit{content-style} tokens of speech, we design a self-supervised method to decouple the timbre, style, and linguistic content gradually, which is similar to a progressive information filtering: (1) We firstly investigate the commonly used self-supervised speech pre-trained model, HuBERT~\cite{HuBERT}. We find that its \textbf{continuous} hidden features contain rich information about timbre, style, and linguistic content (Section~\ref{sec:results-effect-of-codebook-size}), making it a suitable initial stage for information filtering. (2) Inspired by existing works for disentangling speaker-agnostic representations~\cite{vq-vae,vqvc,vq-content-style,ns3}, we employ VQ-VAE~\cite{vq-vae} as a tokenizer for HuBERT to filter out timbre, resulting in \textbf{content-style tokens}. (3) Furthermore, we propose that the vocabulary size of the VQ-VAE codebook can function as the ``width" of the information bottleneck~\cite{autovc}. By reducing the vocabulary size, we can narrow the bottleneck and filter out not only timbre but also significant style information, thereby obtaining \textbf{content tokens}. Besides, we propose to reduce the consecutive duplicate units~\cite{mhubert-duration-reduction} of the content tokens, called \textit{duration reduction}, to further remove some style patterns such as unit-level duration.
+
+The contributions of this paper are summarized as follows:
+
+- We introduce a fully self-supervised approach that progressively decouple timbre, style, and linguistic content of speech. The resulting content-style tokens and content tokens enhance controllability in downstream speech generation tasks, particularly for timbre and style.
+- We propose Vevo, a unified framework that enables versatile, controllable zero-shot voice imitation tasks. It significantly reduces the reliance on annotated corpora, facilitating self-supervised training and in-context learning that can easily be scaled up.
+- Pre-trained on 60K hours of audiobook speech data without any fine-tuning on style-specific corpora, Vevo matches or even surpasses existing methods in accent and emotion conversion tasks -- notably, through zero-shot imitation. Additionally, Vevo's effectiveness in voice conversion and text-to-speech tasks further demonstrates its strong generalization and versatility.
+
+</td><td>
+
 </td></tr></table>
 
 ## 2·Related Works: 相关工作
