--- a/Models/SpeechLM/ST2S/2025.02.11_Vevo.md
+++ b/Models/SpeechLM/ST2S/2025.02.11_Vevo.md
@@ -112,7 +112,82 @@ There are many studies aim to decouple linguistic content, timbre, and style. Ex
 
 ## 3·Methodology: 方法
 
+### VQ-VAE tokenizer for HuBERT
+
 <table><tr><td width="50%">
+
+**Motivation**
+
+To disentangle representations of different speech attributes, we adopt a VQ-VAE tokenizer~\cite{vq-vae} due to its demonstrated potential in disentangling high-level information within speech such as speaker-invariant features~\cite{vq-vae,vqvc,ns3}. In speech domain, it is common practice to apply VQ-VAE either directly on the raw waveform~\cite{vq-vae,vqvc,ns3} or on the self-supervised learning (SSL) based speech representations~\cite{speech-resynthesis-interspeech21,repcodec,fireredtts}. In this work, we choose to apply VQ-VAE based on SSL representations -- specifically, HuBERT~\cite{HuBERT}. The reasons are two fold: (1) HuBERT's continuous hidden features already contain rich information about timbre, style, and linguistic content, making them well-suited for reconstructing acoustic representations such as Mel spectrograms (Section~\ref{sec:results-effect-of-codebook-size}); (2) Self-supervised learning on speech could be also treated as a high-level knowledge distillation. VQ-VAE enables us to further information filtering and disentangling for the SSL features.
+
+**Architecture**
+
+The VQ-VAE consists of three components: Encoder, Vector Quantization (VQ), and Decoder. Formally, given the codebook $\bm{E} = [\bm{e}_1, \bm{e}_2, \dots, \bm{e}_K]
+$ whose vocabulary size is $K$, taking HuBERT hidden features $\bm{x}$ as input, we get the reconstructed $\hat{\bm{x}}$ after the three modules:
+
+$$
+    \bm{z}_e(\bm{x}) &= \text{Encoder}(\bm{x}), \\
+    \bm{z}_q(\bm{x}) &= \bm{e}_k,~\text{where}~k = \arg\min_j \|\bm{z}_e(\bm{x}) - \bm{e}_j\|_2, \\
+    \hat{\bm{x}} &= \text{Decoder}(\bm{z}_q(\bm{x})),
+$$
+
+where $\bm{z}_q(\bm{x})$ is the quantized representation (i.e., token) of $\bm{z}_e(\bm{x})$ after VQ. The loss function consists of the reconstruction loss (whose weight is $\lambda$) and quantization loss (whose weight is $\beta$):
+
+$$
+    \mathcal{L} = \lambda \|\bm{x} - \hat{\bm{x}}\|^2_2 + \beta \|\bm{z}_e(\bm{x}) - \bm{z}_q(\bm{x})\|^2_2.
+$$
+
+Note that there is no real gradient defined for $\bm{z}_q(\bm{x})$. We could utilize the straight-through gradient estimator or exponential moving average (EMA) as the optimization algorithm~\cite{vq-vae}. In this paper, we follow the design in~\cite{soundstream,repcodec} and use the EMA algorithm. We describe the specific module design of VQ-VAE in Appendix~\ref{sec:appendix-vq-vae-tokenizer}.
+Notably, the VQ-VAE model does not contain any downsampling or upsampling operations, thus preserving the sequence length of the input $\bm{x}$. In other words, for the 50 Hz frame-level HuBERT features~\cite{HuBERT}, we can also get 50 Hz frame-level tokens after VQ.
+
+**Analysis of the Vocabulary Size of Codebook**
+
+The quantization of HuBERT hidden features by VQ-VAE can be viewed as a form of \textit{lossy compression}. Inspired by AutoVC~\cite{autovc}, we propose that the vocabulary size of the VQ codebook acts as an information bottleneck. If the input $\bm{x}$ possesses sufficient speech information, reducing the vocabulary size $K$ from infinity to zero:
+(1) \textbf{When $K \rightarrow \infty$}, we consider the bottleneck to be extremely wide, capable of accommodating all information without any loss.
+(2) \textbf{As $K$ decreases}, more low-level acoustic information begins to be lost, such as spectral features related to timbre or prosodic features related to style. At a certain reduced $K$, only the highest-level, most abstract information like linguistic content is preserved within $\bm{x}$. (3) \textbf{When $K \rightarrow 0$}, the bottleneck becomes exceedingly narrow, filtering out even high-level information like linguistic content.
+We validate the above hypothesis through experiments on the zero-shot timbre imitation task (Section~\ref{sec:results-effect-of-codebook-size}). Interestingly, as we progressively reduce $K$, we observe that timbre information is the first to be filtered out (assuming when $K=K_s$), from which we derive the \textit{content-style} tokens. Subsequently, most style information is filtered, and ultimately, almost only the highest-level linguistic content information is retained (assuming when $K=K_c$), from which we derive the \textit{content} tokens. We refer to the VQ-VAE model whose $K=K_s$ as the content-style tokenizer $\bm{Q}_s$, and the model whose $K=K_c$ as the content tokenizer $\bm{Q}_c$.
+
+### Content-Style Modeling (Content to Content-Style)
+
+
+During the content-style modeling stage, our goal is to transform the content token of speech (or text) into content-style tokens, which is prompted by a style reference. This can be formulated as a sequence-to-sequence generation task. For this stage, we employ a decoder-only autoregressive (AR) transformer, known for its powerful capability in such tasks~\cite{transformer,llama,seedtts}. In this section, we will focus only on cases where speech's content tokens are used as input (Figure~\ref{fig:model-ar}). The scenarios where text serves as input will be discussed in Appendix~\ref{sec:appendix-content-style-modeling-text}.
+
+\textbf{Duration Reduction}\quad Given a speech input ${u}$, we denote the content and content-style tokens as $\bm{Q}_c ({u})$ and $\bm{Q}_s ({u})$. Both of them are 50 Hz frame-level representations of equal length. In the content-style modeling stage, $\bm{Q}_s ({u})$ is used as the output. However, instead of using $\bm{Q}_c ({u})$, we apply a \textit{Duration Reduction} strategy to it, yielding the reduced $\bm{Q}_c^{'} ({u})$ as the input. Specifically, we merge the consecutive duplicate units of $\bm{Q}_c ({u})$ into one. For instance, if $\bm{Q}_c ({u}) = [\bm{e}_1, \bm{e}_1, \bm{e}_1, \bm{e}_2, \bm{e}_3, \bm{e}_3]$, it will be condensed to $\bm{Q}_c^{'} ({u}) = [\bm{e}_1, \bm{e}_2, \bm{e}_3]$.
+This strategy offers significant benefits: (1) It further filters out style-specific information within $\bm{Q}_c ({u})$ such as the unit-level duration. Some studies also point out that such a reduction could aid in reducing accents and other style elements~\cite{mhubert-duration-reduction}; (2) It resolves the model's challenge with learning changes in sequence length before and after style modeling when $\bm{Q}_c ({u})$ and $\bm{Q}_s ({u})$ are always equal in length; (3) It shortens the overall sequence length, which is beneficial to model context for transformer.
+
+\textbf{Global Style Encoder}\quad We design a global style encoder to capture the global style guidance from the speech input ${u}$, producing a style embedding (denoted as $\bm{g} ({u})$). Its advantage comes from the flexibility during inference: if we aim to optimize inference speed and reduce memory usage, we can rely solely on this style embedding for style guidance, named as \textit{reference-global-guided} continuation (Figure~\ref{fig:model-ar-inference-global}). However, to maximize the performance of style imitation, in addition to using $\bm{g} ({u})$, we can also append the style reference's content-style tokens into the input sequence to enhance its effect, named as \textit{reference-style-enhanced} continuation (Figure~\ref{fig:model-ar-inference-enhanced}). The global style encoder consists of WavLM-based representation layers and TDNN-based feature extraction layers~\cite{wavlm,ecapa-tdnn}. We describe the detailed module design in Appendix~\ref{sec:appendix-content-sylte-modeling}.
+
+\textbf{Training and Inference}\quad During training, we conduct self-supervised learning on speech data. The input sequence of transformer is $[\langle \text{SOS} \rangle, \bm{Q}_{c}^{'} ({u}), \langle \text{SEP} \rangle, \bm{g} ({u}), \langle \text{SEP} \rangle, \bm{Q}_{s} ({u})]$. We only perform the next token prediction on the last $[\langle \text{SEP} \rangle, \bm{Q}_{s} ({u})]$, with the ground truth being $[\bm{Q}_{s} ({u}), \langle \text{EOS} \rangle]$. Here, $\langle \text{SOS} \rangle$, $\langle \text{SEP} \rangle$, and $\langle \text{EOS} \rangle$ are treated as three special tokens in language model~\cite{bert}. During inference, for a source speech ${u}_i$ and a style reference ${u}_{sr}$, we can conduct the reference-style-enhanced continuation (Figure~\ref{fig:model-ar-inference-enhanced}) by feeding the input sequence $[\langle \text{SOS} \rangle, \bm{Q}_{c}^{'} ({u}_{sr} \oplus {u}_i), \bm{g} ({u}_{sr}), \bm{Q}_s ({u}_{sr})]$ for autoregressive generation, where $\oplus$ means the concatenation. For reference-global-guided continuation (Figure~\ref{fig:model-ar-inference-global}), the input sequence becomes $[\langle \text{SOS} \rangle, \bm{Q}_{c}^{'} ({u}_i), \bm{g} ({u}_{sr})]$.
+
+### Acoustic Modeling (Content-Style to Acoustic)
+
+During the acoustic modeling stage, prompted by a timbre reference, we aim to transform the content-style tokens to Mel spectrograms. We adopt a flow matching transformer~\cite{flow-matching,transformer,llama} (Figure~\ref{fig:model-diffusion}), which has been verified to be effective in in-context learning and reconstructing high-quality acoustic representations~\cite{voicebox,audiobox,cosyvoice,fireredtts}.
+
+During training, given a speech ${u}$ and its Mel spectrogram $\bm{y}_1$, we randomly select a part of $\bm{y}_1$ as the timbre reference (denoted as $\bm{y}_1^{ctx}$), and aim to reconstruct the other part (denoted as $\bm{y}_1^{mis}$) conditioned on $\bm{y}_1^{ctx}$ and the content-style tokens $\bm{Q}_s({u})$. In other words, we aim to model the conditional probability $p(\bm{y}_1^{mis} | \bm{y}_1^{ctx}, \bm{Q}_s({u}))$. Specifically, we follow Voicebox~\cite{voicebox} and use a temporal span masking strategy: $\bm{y}_1^{mis} = \bm{m} \odot \bm{y}_1$, and $\bm{y}_1^{ctx} = (\bm{1} - \bm{m}) \odot \bm{y}_1$, where $\bm{m}$ is a binary temporal mask that is of the same length as $\bm{y}_1$, and $\odot$ means the element-wise multiplying operation. During inference, given a source speech ${u}_i$ and a timbre reference ${u}_{tr}$, all the source's Mel spectrogram will be masked (i.e., $\bm{y}_1^{mis}$). The input conditions become the timbre reference's Mel spectrogram (i.e., $\bm{y}_1^{ctx}$) and the concatenated content-style tokens $\bm{Q}_s ({u}_i \oplus {u}_{tr})$. This enables the generated target to preserve the linguistic content and style of ${u}_i$, and the timbre of ${u}_{tr}$ (Figure~\ref{fig:model-diffusion-inference}).
+
+We use the conditional flow matching algorithms based on optimal transport path, which is widely adopted in related works~\cite{voicebox,cosyvoice,fireredtts}. The loss function is defined as:
+\begin{equation}
+\begin{split}
+    \mathcal{L}_{cfm} &= \mathbb{E}_{t,\bm{m},\bm{y}_0,\bm{y}_1}  \left\| \frac{d \bm{y}_t}{d t} - f_t(\bm{y}_t, t, \bm{y}_1^{ctx}, \bm{Q}_s({u})) \right\|_2^2, \\
+    \text{where}~\bm{y}_t &= (1 - (1 - \sigma)t) \cdot \bm{y}_0 + t \cdot \bm{y}_1,
+\end{split}
+\end{equation}
+where $t$ is the time step that is sampled from the uniform distribution $\mathcal{U}(0, 1)$, $\bm{y}_0$ is a noise sampled from standard Gaussian distribution, $f_t(\cdot)$ is the vector filed (which is estimated by transformer). and $\sigma$ is a small constant of the optimal transport (OT) path.
+% We follow the implementation of Voicebox~\cite{voicebox} and only compute the loss for masked frames.
+Notably, the frame rates of the content-style tokens $\bm{Q}_s({u})$ and the Mel spectrogram $\bm{y}_1$ could be different. We follow~\cite{amphion-svc} and use a simple signal resampling operation to align them. Then we use the adding operation to fuse their frame-level features. We describe the detailed module design in Appendix~\ref{sec:appendix-acoustic-modeling}. After obtaining the Mel spectrogram, we utilize a BigVGAN~\cite{bigvgan} vocoder to produce the waveform (Appendix~\ref{sec:appendix-vocoder}).
+
+### Vevo for Various Zero-Shot Imitation Tasks
+
+Assume that during the content-style modeling and acoustic modeling stages, we have obtained pre-trained models $\mathcal{M}_{style}$ and $\mathcal{M}_{acoustic}$ respectively. We can then adjust only the inference pipeline to apply Vevo to various zero-shot imitation tasks. Given the source speech ${u}_{\textcolor{blue}{\bm{i}}}$ (or text $\mathcal{T}_{\textcolor{blue}{\bm{i}}}$) and the reference ${u}_{\textcolor{red}{\bm{r}}}$, we can utilize the following variants of Vevo to achieve zero-shot timbre, style, and voice imitation tasks (`` $\xrightarrow{u} \mathcal{M}$ " means that the model $\mathcal{M}$ is prompted by $u$ to generate):
+
+- \textbf{Vevo-Timbre} for timbre imitation: $\bm{Q}_s ({u}_{\textcolor{blue}{\bm{i}}}) \xrightarrow{\displaystyle {{u}_{\textcolor{red}{\bm{r}}}}} \mathcal{M}_{acoustic}$
+- \textbf{Vevo-Style} for style Imitation: $\bm{Q}_c^{'} ({u}_{\textcolor{blue}{\bm{i}}}) \xrightarrow{\displaystyle {u}_{\textcolor{red}{\bm{r}}}} \mathcal{M}_{style} \xrightarrow{\displaystyle {u}_{\textcolor{blue}{\bm{i}}}} \mathcal{M}_{acoustic}$
+- \textbf{Vevo-Voice} for voice imitation (conversion task): $\bm{Q}_c^{'} ({u}_{\textcolor{blue}{\bm{i}}}) \xrightarrow{\displaystyle {u}_{\textcolor{red}{\bm{r}}}} \mathcal{M}_{style} \xrightarrow{\displaystyle {u}_{\textcolor{red}{\bm{r}}}} \mathcal{M}_{acoustic}$
+- \textbf{Vevo-TTS} for voice imitation (synthesis task): $\widetilde{\bm{Q}_c} (\mathcal{T}_{\textcolor{blue}{\bm{i}}}) \xrightarrow{\displaystyle {u}_{\textcolor{red}{\bm{r}}}} \widetilde{\mathcal{M}}_{style} \xrightarrow{\displaystyle {u}_{\textcolor{red}{\bm{r}}}} \mathcal{M}_{acoustic}$
+
+For Vevo-TTS, $\widetilde{\bm{Q}_c} (\mathcal{T}_{\textcolor{blue}{\bm{i}}})$ means the tokenization for $\mathcal{T}_{\textcolor{blue}{\bm{i}}}$, and $\widetilde{\mathcal{M}}_{style}$ means the pre-trained model for content-style modeling that takes text as input. We describe its detailed design in Appendix~\ref{sec:appendix-content-style-modeling-text}.
+
+</td><td>
 
 </td></tr></table>
 
