--- a/Surveys/2024.10.24__Survey__A_Survey_on_Speech_Large_Language_Models_(17P).md
+++ b/Surveys/2024.10.24__Survey__A_Survey_on_Speech_Large_Language_Models_(17P).md
@@ -135,7 +135,7 @@ In 2022, Radford et al. introduced the **Whisper** model, which further integrat
 <tr><td>
 
 Researchers, unsatisfied with simply using speech as input and text as output, began exploring end-to-end speech-text multimodal inputs and outputs.
-In 2022, Junyi Ao et al. introduced [SpeechT5](../Models/SpeechLM/2021.10.14_SpeechT5.md)[^10], pioneering the investigation of a unified encoder-decoder framework for various spoken language processing tasks.
+In 2022, Junyi Ao et al. introduced [SpeechT5](../Models/SpeechLM/ST2ST/2021.10.14_SpeechT5.md)[^10], pioneering the investigation of a unified encoder-decoder framework for various spoken language processing tasks.
 
 </td><td>
 
@@ -166,10 +166,10 @@ This separation laid the groundwork for the subsequent integration of large lang
 
 Currently, Speech LLMs can mainly be divided into two categories \ref{fig:overall}.
 The first is **Discrete Sequence Modeling**, represented by approaches that condense audio feature information into discrete tokens, which are then passed to the LLM for processing.
-- In early 2023, Microsoft released [VALL-E](../Models/SpeechLM/2023.01.05_VALL-E.md)[^12], a typical study utilizing LLMs to process audio features.
+- In early 2023, Microsoft released [VALL-E](../Models/SpeechLM/ST2S/2023.01.05_VALL-E.md)[^12], a typical study utilizing LLMs to process audio features.
 VALL-E introduces the Transformer architecture, combining audio features with the capabilities of language models to achieve more natural text-to-speech generation.
 - Following this, the emergence of [SpeechGPT](../Models/SpokenDialogue/2023.05.18_SpeechGPT.md)[^13] marked a deep integration of speech models and LLMs, capable not only of processing audio but also interacting through natural language, bringing a new interactive paradigm to the field of speech recognition.
-- In mid-2023, Google launched [AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md)[^14], which further expanded the capabilities of speech recognition into multimodal processing, enhancing performance in multimodal tasks.
+- In mid-2023, Google launched [AudioPaLM](../Models/SpeechLM/ST2ST/2023.06.22_AudioPaLM.md)[^14], which further expanded the capabilities of speech recognition into multimodal processing, enhancing performance in multimodal tasks.
 
 </td><td>
 
@@ -177,7 +177,7 @@ VALL-E introduces the Transformer architecture, combining audio features with th
 <tr><td>
 
 The second is **Continuous Sequence Modeling**, where audio feature information is projected into continuous input embedding vectors and then transmitted to the LLM for processing.
-- In 2023, Deshmukh et al. introduced [Pengi](../Models/SpeechLM/2023.05.19_Pengi.md)[^15], which projects speech modality information into the text space of large models without altering any parameters in LLM such as embedding vector spaces.
+- In 2023, Deshmukh et al. introduced [Pengi](../Models/SpeechLM/ST2T/2023.05.19_Pengi.md)[^15], which projects speech modality information into the text space of large models without altering any parameters in LLM such as embedding vector spaces.
 - Subsequently, continuous audio feature information began to be used to convey richer representations to the LLM~\cite{[SALMONN](../Models/SpokenDialogue/2023.10.20_SALMONN.md)[^16]; chu2023qwen [^17],bai2024seed[^18]}, resulting in significant performance improvements across a range of tasks in the SLU domain.
 - In 2024, Ma et al. further proposed \textit{SLAM-LLM}, which involves the addition of a linear projector, allowing the task to be greatly completed by training only the projection layer~\cite{ma2024}[^19].
 
@@ -322,7 +322,7 @@ This capability is particularly valuable in dynamic environments like live broad
 <table><tr><td width="50%">
 
 The integration of LLMs into speech recognition has expanded the scope of tasks beyond traditional speech-to-text, enabling real-time multimodal interaction.
-Models like [VoxtLM](../Models/SpeechLM/2023.09.14_VoxtLM.md)[^33] and [LauraGPT](../Models/SpeechLM/2023.10.07_LauraGPT.md)[^34] facilitate seamless integration of speech with visual and textual inputs, providing coherent and accurate multimodal outputs.
+Models like [VoxtLM](../Models/SpeechLM/2023.09.14_VoxtLM.md)[^33] and [LauraGPT](../Models/SpeechLM/ST2ST/2023.10.07_LauraGPT.md)[^34] facilitate seamless integration of speech with visual and textual inputs, providing coherent and accurate multimodal outputs.
 This capability is particularly valuable in applications such as live transcription and synchronized translation during presentations, where both speech and visual context need to be processed simultaneously.
 
 </td><td>
@@ -331,7 +331,7 @@ This capability is particularly valuable in applications such as live transcript
 <tr><td>
 
 Moreover, LLM-based systems have introduced new functionalities, such as the generation of descriptive text, summaries, and even translations based on audio input.
-For instance, [VioLA](../Models/SpeechLM/2023.05.25_VioLA.md)[^35] can generate coherent summaries and cross-language translations with high fluency and accuracy, outperforming traditional models in both speed and quality of output.
+For instance, [VioLA](../Models/SpeechLM/ST2ST/2023.05.25_VioLA.md)[^35] can generate coherent summaries and cross-language translations with high fluency and accuracy, outperforming traditional models in both speed and quality of output.
 This represents a significant advancement in how speech recognition systems can interact with and interpret complex multimodal data streams.
 In addition, the integration of large language models with acoustics has demonstrated significant development potential across various specialized fields~\cite{zheng2024bat}.[^36]
 
@@ -533,7 +533,7 @@ This approach not only preserves the integrity of the audio feature information 
 
 Projecting the speech modality into the text modality is certainly straightforward, but it does not achieve lossless modality fusion in the true sense.
 Information loss and conflicts may occur during modality conversion (to be elaborated later).
-Therefore, researchers have proposed another modality alignment approach, which involves modifying the original input space of the large language model to integrate the audio modality ([AudioPaLM](../Models/SpeechLM/2023.06.22_AudioPaLM.md)[^14]; [SpeechGPT](../Models/SpokenDialogue/2023.05.18_SpeechGPT.md)[^13]; [AnyGPT](../Models/SpeechLM/2024.02.19_AnyGPT.md)[^41]).
+Therefore, researchers have proposed another modality alignment approach, which involves modifying the original input space of the large language model to integrate the audio modality ([AudioPaLM](../Models/SpeechLM/ST2ST/2023.06.22_AudioPaLM.md)[^14]; [SpeechGPT](../Models/SpokenDialogue/2023.05.18_SpeechGPT.md)[^13]; [AnyGPT](../Models/SpeechLM/2024.02.19_AnyGPT.md)[^41]).
 Specifically, this method augments the token space by adding audio tokens on top of the existing text tokens, creating a new token space.
 These new audio token are synthesized from the audio features extracted in the previous step, thereby largely preserving the original audio information (illustrated in~\Cref{fig:space_combine}).
 
@@ -701,7 +701,7 @@ In machine translation, the NLLB model, which is fine-tuned on LLMs aiming to be
 Furthermore, BigTranslate, leveraging instruction tuning based on LLaMA, has expanded the translation applicability of LLMs to a broader array of languages, achieving results comparable to those of ChatGPT and Google Translate~\cite{yang2023bigtranslate}[^27].
 The advent of LLMs has also propelled advancements in speech translation.
 Using a Cascaded ASR + MT approach, Whisper has shown notable efficacy in speech translation by utilizing extensive web-scale data~\cite{radford2023robust}[^23].
-Subsequently, [AudioPaLM2](../Models/SpeechLM/2023.06.22_AudioPaLM.md)[^14] enhanced speech translation quality by integrating text and speech-based models, thereby achieving impressive results as an end-to-end speech translation model.
+Subsequently, [AudioPaLM2](../Models/SpeechLM/ST2ST/2023.06.22_AudioPaLM.md)[^14] enhanced speech translation quality by integrating text and speech-based models, thereby achieving impressive results as an end-to-end speech translation model.
 Previously achieving state-of-the-art in both ST and MT tasks on various public datasets, SeamlessM4T~\cite{barrault2023seamlessm4t}[^29], a foundational multilingual and multitask model, is now surpassed by GenTranslate.
 This model utilizes the information stored in N-best candidates instead of relying solely on beam search decoding's top-1 selection, a common practice among other models~\cite{hu2024gentranslate}[^28].
 Please refer to ~\Cref{fig:st} for a detailed performance comparison of these models.
@@ -716,7 +716,7 @@ Please refer to ~\Cref{fig:st} for a detailed performance comparison of these mo
 
 Besides the above-mentioned two speech tasks, some Speech LLMs also demonstrate remarkable results on a wide range of speech tasks, showcasing their good multi-tasking and cross-tasking capabilities.
 Among these, Pengi is notable for its versatility, as it supports both open-ended tasks like Audio Captioning and Audio Question Answering (AQA), and close-ended tasks such as Sound Event and Scene Classification, without requiring any task-specific fine-tuning or extensions.
-Pengi's approach involves framing all audio tasks as text-generation tasks, leveraging a unified architecture that effectively blends audio and text inputs into text outputs, achieving state-of-the-art performance on several benchmarks, including audio question answering and sound event classification ([Pengi](../Models/SpeechLM/2023.05.19_Pengi.md)[^15]).
+Pengi's approach involves framing all audio tasks as text-generation tasks, leveraging a unified architecture that effectively blends audio and text inputs into text outputs, achieving state-of-the-art performance on several benchmarks, including audio question answering and sound event classification ([Pengi](../Models/SpeechLM/ST2T/2023.05.19_Pengi.md)[^15]).
 
 </td><td>
 
