--- a/Models/Acoustic/2025.01.08_FleSpeech.md
+++ b/Models/Acoustic/2025.01.08_FleSpeech.md
@@ -25,8 +25,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 Controllable speech generation methods typically rely on single or fixed prompts, hindering creativity and flexibility.
 These limitations make it difficult to meet specific user needs in certain scenarios, such as adjusting the style while preserving a selected speaker's timbre, or choosing a style and generating a voice that matches a character's visual appearance.
@@ -37,8 +36,7 @@ Additionally, we develop a data collection pipeline for multimodal datasets to f
 Comprehensive subjective and objective experiments demonstrate the effectiveness of ***FleSpeech***.
 Audio samples are available at [this https URL](https://kkksuper.github.io/FleSpeech/).
 
-</details>
-<br>
+</td><td>
 
 可控语音生成方法通常依赖于单个或固定提示, 限制了创造性和灵活性.
 这些限制使得难以满足某些场景下的特定用户需求, 例如调整风格同时保留选定说话人的音色, 或选择风格并生成与角色视觉外观相匹配的声音.
@@ -50,6 +48,8 @@ Audio samples are available at [this https URL](https://kkksuper.github.io/FleSp
 此外, 我们开发了多模态数据集的数据收集流程以促进该领域的进一步的研究和应用.
 全面的主观和客观实验表明了 ***FleSpeech*** 的有效性.
 音频示例可在[此链接](https://kkksuper.github.io/FleSpeech/)获得.
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
