--- a/Models/Vocoder/2025.01.02_RingFormer.md
+++ b/Models/Vocoder/2025.01.02_RingFormer.md
@@ -20,8 +20,7 @@
 
 ## Abstract: 摘要
 
-<details>
-<summary>展开原文</summary>
+<table><tr><td width="50%">
 
 While transformers demonstrate outstanding performance across various audio tasks, their application to neural vocoders remains challenging.
 Neural vocoders require the generation of long audio signals at the sample level, which demands high temporal resolution.
@@ -34,8 +33,7 @@ The proposed model is applied to the decoder of the text-to-speech model VITS an
 Experimental results show that ***RingFormer*** achieves comparable or superior performance to existing models, particularly excelling in real-time audio generation.
 Our code and audio samples are available on GitHub.
 
-</details>
-<br>
+</td><td>
 
 尽管 Transformers 在各种音频任务上都展现了卓越的性能, 但它们在神经声码器的应用上仍然存在挑战.
 神经声码器需要在采样级别生成长音频信号, 需要高时域分辨率.
@@ -49,6 +47,8 @@ Our code and audio samples are available on GitHub.
 所提出的模型被应用到文本转语音模型 VITS 的解码器中, 并和其他先进声码器如 HiFi-GAN, iSTFTNet, BigVGAN 进行了相同条件下的各种客观和主观指标的比较.
 实验结果表明 ***RingFormer*** 与现有模型相比有着相当或更好的性能, 尤其是在实时音频生成方面.
 我们的代码和音频样本可在 [Github](https://github.com/seongho608/RingFormer) 上获得.
+
+</td></tr></table>
 
 ## 1·Introduction: 引言
 
